--- a/CLI/CLI.csproj
+++ b/CLI/CLI.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Notes\Notes.csproj" />
+  </ItemGroup>
+
 </Project>
